--- a/Prove3D/prove3dsite/src/main/resources/application.properties
+++ b/Prove3D/prove3dsite/src/main/resources/application.properties
@@ -16,4 +16,11 @@ spring.freemarker.template-loader-path: classpath:/templates
 spring.freemarker.suffix: .ftl
 spring.freemarker.request-context-attribute: rc
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=prove3d@gmail.com
+spring.mail.password=azulazul
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 
