--- a/Prove3D/prove3dapp/pom.xml
+++ b/Prove3D/prove3dapp/pom.xml
@@ -37,7 +37,12 @@
 			<groupId>com.microsoft.azure</groupId>
 			<artifactId>azure-storage-spring-boot-starter</artifactId>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20190722</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
