Conexao com BD Gusta e enviando alertas slack

--- a/Prove3D/prove3dapp/src/main/resources/application.properties
+++ b/Prove3D/prove3dapp/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.jpa.hibernate.ddl-auto=update
 
 ### MySQL DB config ###########
-spring.datasource.url=jdbc:mysql://localhost/prove3d?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=bandtec
-spring.datasource.password=digitalschool
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.url=jdbc:mysql://localhost/prove3d?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.username=bandtec
+#spring.datasource.password=digitalschool
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
-#spring.datasource.url=jdbc:sqlserver://srvgrupo5a.database.windows.net:1433;database=bdgrupo5a;user=usergrupo5a@srvgrupo5a;password=#Gfgrupo5;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-#spring.datasource.username=usergrupo5a@srvgrupo5a
-#spring.datasource.password=#Gfgrupo5
+spring.datasource.url=jdbc:sqlserver://srv01191098.database.windows.net:1433;database=Meubanco;user=gustavocaires@srv01191098;password=#Gf48959781843;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=gustavocaires@srv01191098
+spring.datasource.password=#Gf48959781843
 
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
